Fix posts alignment

--- a/assets/css/_general.scss
+++ b/assets/css/_general.scss
@@ -117,6 +117,7 @@ h1, h2, h3, h4, h5,
 
   .page-content{
     max-width: 640px;
+    text-align: left;
     @extend .mx-auto;
     @extend .mb-5;
   }
